--- a/src/app/pages/main-movies-view/main-movies-view.component.html
+++ b/src/app/pages/main-movies-view/main-movies-view.component.html
@@ -2,7 +2,6 @@
 
 
 <div class="container spacer">
-    
     <div class="container-fluid vh-100">
         <div class="action-container">
             <button class="btn btn-pill me-3" (click)="sortByTitle(); toggleSortOrder()">Sort by Title</button>
@@ -11,13 +10,16 @@
 
         <div class="row mt-3 movie-content">
             <div class="col-lg-3" *ngFor="let item of filteredMovies ? filteredMovies : movies">
-                <img [src]="item.imgCoverLink" [alt]="item.title" class="img-fluid">
+                    <img [src]="item.imgCoverLink" [alt]="item.title" class="img-fluid">
+                <div class="ratings">
+                    <label>{{item.rating}}</label>
+                </div>
                 <div class="info-wrapper">
                     <h3>{{item.title}}</h3>
                     <h5>{{item.genre}}</h5>
                     <h5 class="text-muted">Date released: {{item.releasedDate | date}}</h5>
                 </div>
-            </div>
+        </div>
         </div>
           
     </div>
