--- a/src/app/pages/main-movies-view/main-movies-view.component.scss
+++ b/src/app/pages/main-movies-view/main-movies-view.component.scss
@@ -16,6 +16,21 @@ mat-grid-tile {
     box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
   }
 }
+
+.ratings {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: -50px;
+  background-color: #f78d01;
+  border-radius: 24px;
+  width: 30px;
+  height: 30px;
+  padding: 1px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
+  z-index: 2; 
+}
 .info-wrapper{
   h3, h5 {
     margin: 0;
