added movie details and vid player

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,6 +33,20 @@ body, .mat-toolbar.mat-primary{
     padding: 5px 25px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+.btn-primary-custom{
+    background-color: #187a5f;
+    color: var(--white);
+}
+.btn-primary-custom:hover{
+    background-color: #208a6c;
+}
+.btn-secondary-custom{
+    background-color: rgba(24, 122, 109, 0.16) ;
+    color: var(--white);
+}
+.btn-secondary-custom:hover{
+    background-color: rgba(26, 157, 140, 0.483) ;
+}
 .btn-pill:hover, .btn-pill:active{
     background-color: #187a5f !important;
 }
@@ -61,4 +75,8 @@ body, .mat-toolbar.mat-primary{
     position: sticky;
     top: 0;
     z-index: 1;
+}
+
+.spacer{
+    margin-top: 75px;
 }
