--- a/src/app/pages/main-movies-view/main-movies-view.component.html
+++ b/src/app/pages/main-movies-view/main-movies-view.component.html
@@ -10,7 +10,7 @@
 
         <div class="row mt-3 movie-content">
             <div class="col-lg-3" *ngFor="let item of filteredMovies ? filteredMovies : movies">
-                    <img [src]="item.imgCoverLink" [alt]="item.title" class="img-fluid">
+                    <img [src]="item.imgCoverLink" [alt]="item.title" class="img-fluid" [routerLink]="'/details/' + item.id">
                 <div class="ratings">
                     <label>{{item.rating}}</label>
                 </div>
