--- a/src/app/pages/main-movies-view/main-movies-view.component.scss
+++ b/src/app/pages/main-movies-view/main-movies-view.component.scss
@@ -14,6 +14,12 @@ mat-grid-tile {
   img{
     width: 80%;
     box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
+    cursor: pointer;
+  }
+  img:hover{
+    transition: all 0.2s ease;
+    width: 90%;
+    cursor: pointer;
   }
 }
 
