--- a/src/styles.scss
+++ b/src/styles.scss
@@ -80,3 +80,9 @@ body, .mat-toolbar.mat-primary{
 .spacer{
     margin-top: 75px;
 }
+
+.container{
+    padding-left: 250px;
+    width: 100%;
+    transition: all 0.5s ease;
+  }
