--- a/src/app/pages/movie-details/movie-details.component.html
+++ b/src/app/pages/movie-details/movie-details.component.html
@@ -3,8 +3,8 @@
 <div class="container spacer">
     <div class="container-fluid" *ngFor="let item of movie">
         <div class="row ">
-            <div class="col-lg-5 col-md-5 col-sm-5 d-flex justify-content-center align-items-center">
-                <div class="img-thumbnail-container d-flex justify-content-center align-items-center">
+            <div class="col-lg-5 col-md-5 col-sm-5 d-flex justify-content-center">
+                <div class="img-thumbnail-container">
                     <img [src]="item.imgCoverLink" [alt]="item.title" class="img-thumbnail">
                 </div>
             </div>
@@ -22,8 +22,8 @@
                 </div>
 
                 <div class="button-container">
-                    <button class="btn btn-primary-custom me-2">Add to watchlist</button>
-                    <button class="btn btn-secondary-custom me-2">Remove from watchlist</button>
+                    <button class="btn btn-primary-custom me-2" (click)="addToWatchlist()">Add to watchlist</button>
+                    <button class="btn btn-secondary-custom me-2" (click)="removeFromWatchlist()">Remove from watchlist</button>
                     <button class="btn btn-secondary-custom me-2" (click)="showTrailer = !showTrailer">Watch trailer</button>
                 </div>
 
