--- a/src/app/pages/movie-details/movie-details.component.scss
+++ b/src/app/pages/movie-details/movie-details.component.scss
@@ -1,24 +1,33 @@
-.container{
-    padding-left: 250px;
-    width: 100%;
-    transition: all 0.5s ease;
+  .img-thumbnail-container {
+      .img-thumbnail {
+          width: 90%;
+      }
   }
 
-  .img-thumbnail-container{
-    .img-thumbnail{
-        width: 90%;
-    }
+  .movie-details-container {
+      p {
+          font-size: 16px;
+      }
+
+      .text-wrapper {
+          margin: 0;
+          padding: 0;
+          line-height: 0.7em;
+          color: #cfcfcf;
+      }
   }
 
-.movie-details-container{
-    p{
-        font-size: 16px;
-    }
 
-    .text-wrapper{
-        margin: 0;
-        padding: 0;
-        line-height: 0.7em;
-        color: #cfcfcf;
-    }
-}
+  @media screen and (max-width: 1000px) {
+
+      .movie-details-container,
+      .button-container {
+          padding: 20px;
+      }
+
+      .img-thumbnail-container {
+          .img-thumbnail {
+              width: 65%;
+          }
+      }
+  }
