--- a/src/app/pages/main-movies-view/main-movies-view.component.html
+++ b/src/app/pages/main-movies-view/main-movies-view.component.html
@@ -9,17 +9,19 @@
         </div>
 
         <div class="row mt-3 movie-content">
-            <div class="col-lg-3" *ngFor="let item of filteredMovies ? filteredMovies : movies">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-6" *ngFor="let item of filteredMovies ? filteredMovies : movies">
+                <div class="image-container d-flex justify-content-center">
                     <img [src]="item.imgCoverLink" [alt]="item.title" class="img-fluid" [routerLink]="'/details/' + item.id">
+                </div>
                 <div class="ratings">
                     <label>{{item.rating}}</label>
                 </div>
-                <div class="info-wrapper">
+                <div class="info-wrapper mb-3">
                     <h3>{{item.title}}</h3>
                     <h5>{{item.genre}}</h5>
                     <h5 class="text-muted">Date released: {{item.releasedDate | date}}</h5>
                 </div>
-        </div>
+            </div>
         </div>
           
     </div>
