--- a/src/app/pages/movie-details/movie-details.component.html
+++ b/src/app/pages/movie-details/movie-details.component.html
@@ -3,13 +3,13 @@
 <div class="container spacer">
     <div class="container-fluid" *ngFor="let item of movie">
         <div class="row ">
-            <div class="col-lg-5 col-md-5 col-sm-5 d-flex justify-content-center">
-                <div class="img-thumbnail-container">
+            <div class="col-lg-5 col-md-5 col-sm-5">
+                <div class="img-thumbnail-container d-flex justify-content-center">
                     <img [src]="item.imgCoverLink" [alt]="item.title" class="img-thumbnail">
                 </div>
             </div>
             <div class="col-lg-7 col-md-7 col-sm-7">
-                <div class="movie-details-container">
+                <div class="movie-details-container ">
                     <h1>{{item.title}}</h1>
                     <div class="text-wrapper">
                         <p>{{item.releasedDate | date}}</p>
@@ -22,9 +22,9 @@
                 </div>
 
                 <div class="button-container">
-                    <button class="btn btn-primary-custom me-2" (click)="addToWatchlist()">Add to watchlist</button>
-                    <button class="btn btn-secondary-custom me-2" (click)="removeFromWatchlist()">Remove from watchlist</button>
-                    <button class="btn btn-secondary-custom me-2" (click)="showTrailer = !showTrailer">Watch trailer</button>
+                    <button class="btn btn-primary-custom me-2 mb-2" (click)="addToWatchlist()">Add to watchlist</button>
+                    <button class="btn btn-secondary-custom me-2 mb-2" (click)="removeFromWatchlist()">Remove from watchlist</button>
+                    <button class="btn btn-secondary-custom me-2 mb-2" (click)="showTrailer = !showTrailer">Watch trailer</button>
                 </div>
 
                 <div class="video-container mt-5" *ngIf="showTrailer === true">
